--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,5 +23,9 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+td,
+th {
+  padding: 6px 12px;
 }
